test/pass/63-infer_empty_let.perk
type <T> unit = Empty

fun main(): void {
    let x: unit@void = Empty
}