test/fail/17-void_parameter_lambda.perk
let f := (a: void): void{
    skip
}